--- a/.gitconfig
+++ b/.gitconfig
@@ -2,3 +2,14 @@
 	defaultBranch = main
 [user]
 	name = Hannes Bibel
+[core]
+	pager = delta
+[rerere]
+	enabled = true
+[credential]
+	helper =
+	helper = /usr/local/share/gcm-core/git-credential-manager
+[credential "https://dev.azure.com"]
+	useHttpPath = true
+[credential "http://194.114.63.23:8080"]
+	provider = generic
